Fix a bug related to tab menu vertical alignment

--- a/static/frontary/pumpkin/theme.css
+++ b/static/frontary/pumpkin/theme.css
@@ -3075,7 +3075,6 @@ td.tab-menu-selected {
     height: 40px;
     padding: 0 16px;
     text-align: center;
-    vertical-align: bottom;
     font-weight: 500;
     line-height: 24px;
     font-size: 16px;
